<resources>
    <string name="app_name">Sales Outbound</string>
    <string name="txt_login_name">用户名:</string>
    <string name="txt_login_password">密&#160;码:</string>
    <string name="txt_login_button">登陆</string>
    <string name="txt_exist_button">退出</string>
    <string name="txt_update_location">Sales Outbound</string>
    <string name="txt_menu_1">9100</string>
    <string name="txt_menu_2">9300</string>
    <string name="txt_menu_3">Delivery 过站</string>
    <string name="txt_menu_4">9500</string>
    <string name="txt_menu_5">手动操作</string>
    <string name="txt_history">历史</string>
    <string name="txt_setup">设置</string>
    <string name="txt_null_5">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="txt_scan_result">扫描结果:</string>
    <string name="txt_search">查询</string>
    <string name="txt_no_history">暂无记录</string>
    <string name="txt_print">打印</string>
    <string name="txt_parts_unmount_btn">Unmount</string>
    <string name="txt_auto_print">自动打印(移库请取消此选项)</string>
    <string name="txt_fosb_id">FOUP/FOSB&#160;ID</string>
    <string name="txt_dry_start">晾干开始时间</string>
    <string name="txt_end">结束托盘</string>
    <string name="txt_next_clean">下次清洗时间</string>
    <string name="txt_server_address">服务器地址：</string>
    <string name="txt_server_port">服务器端口：</string>
    <string name="txt_setting">设置</string>
    <string name="txt_scan">扫码</string>
    <string name="txt_save">保存</string>
    <string name="txt_user_name">用&#160;&#160;&#160;&#160;户&#160;&#160;&#160;&#160;名：</string>
    <string name="txt_print_setting">打印浓度：</string>
    <string name="txt_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="txt_site_id">SiteID：&#160;&#160;&#160;&#160;</string>
    <string name="txt_dry_hour">晾干(小时)：</string>
    <string name="txt_clean_hour">清洗(小时)：</string>
    <string name="txt_setting_psw">验证口令：</string>
    <string name="txt_check_setting_psw">确认口令：</string>
    <string name="txt_scan_no_result">扫描结果为空</string>
    <string name="txt_get_print_img_failed">生成图片失败</string>
    <string name="txt_save_history_failed">保存打印历史失败</string>
    <string name="txt_event_unknown">打印机未知错误</string>
    <string name="txt_event_no_paper">打印机缺纸</string>
    <string name="txt_event_paper_jam">打印机卡纸</string>
    <string name="txt_event_print_ok">打印完成</string>
    <string name="txt_event_high_temp">机芯温度过热</string>
    <string name="txt_event_low_temp">机芯温度过低</string>
    <string name="txt_event_connected">打印机连接完成</string>
    <string name="txt_event_connect_faild">打印机连接失败</string>
    <string name="txt_event_state_ok">打印机状态正常</string>
    <string name="txt_event_checked_blackflag">检测到黑标</string>
    <string name="txt_event_no_checked_blackflag">未检测到黑标</string>
    <string name="txt_event_timeout">打印机响应超时</string>
    <string name="txt_event_print_faild">打印失败</string>
    <string name="txt_event_no_paper_check_black">检测黑标时缺纸</string>
    <string name="txt_input_server_address">请输入服务器地址</string>
    <string name="txt_input_server_port">请输入服务器端口</string>
    <string name="txt_input_site_id">请输入SiteID</string>
    <string name="txt_input_username">请输入用户名</string>
    <string name="txt_input_password">请输入密码</string>
    <string name="txt_input_dry_hour">请输入晾干(小时)</string>
    <string name="txt_input_clean_hour">请输入清洗(小时)</string>
    <string name="txt_input_check_setting_psw">两次密码输入不致</string>
    <string name="txt_input_setting_psw">口令</string>
    <string name="txt_print_setting_inputtext">请输入数字，如25</string>
    <string name="txt_please_input_setting_psw">请输入验证口令</string>
    <string name="txt_save_ok">保存成功</string>
    <string name="txt_alert_title">提示</string>
    <string name="txt_alert_message">请先完成设置</string>
    <string name="txt_ok">确定</string>
    <string name="txt_connect_fail">连接服务器失败，请稍后重试</string>
    <string name="txt_connect_success">连接服务器成功</string>
    <string name="txt_msg">结果:</string>
    <string name="txt_button_update">2、更新库位</string>
    <string name="txt_carrier">Lot ID&#160;&#160;&#160;&#160;:</string>
    <string name="txt_pallet_no">Pallet No.:</string>
    <string name="txt_location">标签Lot ID:</string>
    <string name="txt_logout">退出</string>
    <string name="login_fail">登陆失败，用户名密码错误。</string>
    <string name="login_success">登陆成功。</string>
    <string name="Input_CrrID">请输入CrrID。</string>
    <string name="Input_Location">请输入库位。</string>
    <string name="enter_username">请输入用户名。</string>
    <string name="enter_passwork">请输入密码。</string>
    <string name="wait_please">请稍等正在操作......</string>
    <string name="txt_print_test">打印测试</string>
    <string name="End_Clear_Fisrt">请先结束清洗</string>
    <string name="DryStartTime_Error">晾干时间不存在，无法打印。</string>
    <string name="enter_code">请输验证口令</string>
    <string name="txt_cancel">取消</string>
    <string name="code_error">验证口令错误</string>
    <string name="location_error">库存位置错误</string>
    <string name="txt_confirm">确认</string>
    <string name="txt_check_version_fail">检测版本失败。</string>
    <string name="txt_print_update">下载</string>
    <string name="txt_abort">关于</string>
    <string name="txt_eqp_id">EQP ID&#160;&#160;:</string>
    <string name="txt_new_part">New Part&#160;&#160;:</string>
    <string name="txt_sn">S/N&#160;&#160;:</string>
    <string name="txt_mount">Mount</string>
    <string name="txt_column_delivery_no">Delivery No.</string>
    <string name="txt_column_pallet_no">Pallet No.</string>
    <string name="txt_column_ouput_date">出厂日期</string>
    <string name="txt_column_expire_date">到期时间</string>
    <string name="txt_column_picking_date">领料日期</string>
    <string name="txt_column_SN">SN</string>
    <string name="txt_column_part_type">Part_Type</string>
    <string name="txt_column_mount_date">Mount Date</string>
    <string name="txt_column_unmount_date">Unmount Date</string>
    <string name="txt_input_order">提货单：</string>
    <string name="txt_input_order_index">调拨单号：</string>
    <string name="txt_show">Show</string>
    <string name="text_input_and_print">收货打印标签</string>
    <string name="alert_no_data">No data.</string>
    <string name="text_mount_success">装载成功。</string>
    <string name="txt_refresh">Refresh</string>
    <string name="txt_delivery_no">Delivery No.:</string>
    <string name="txt_lot_id_small">小标签Lot ID:</string>
    <string name="txt_lot_id_big">大标签Lot ID:</string>
    <string name="txt_cust_part_no">Cust Part No.:</string>
    <string name="txt_pallet_id">Pallet ID</string>
    <string name="txt_factory">Factory</string>
    <string name="txt_input_factory">请输入Factory</string>
    <string name="txt_lot_id">Lot ID</string>
    <string name="text_save_pws">保存密码</string>

</resources>
