<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dddddd"
        android:orientation="vertical">

        <include
            android:id="@+id/includeTitle"
            layout="@layout/title_bar"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <LinearLayout style="@style/SettingRow">

                <TextView
                    style="@style/TextSettingLeft"
                    android:text="@string/txt_server_address" />

                <EditText
                    android:id="@+id/etServerAddress1"
                    style="@style/TextServerAddress"
                    android:text="10" />

                <TextView
                    style="@style/TextCommon"
                    android:text="." />

                <EditText
                    android:id="@+id/etServerAddress2"
                    style="@style/TextServerAddress"
                    android:text="10" />

                <TextView
                    style="@style/TextCommon"
                    android:text="." />

                <EditText
                    android:id="@+id/etServerAddress3"
                    style="@style/TextServerAddress"
                    android:text="200" />

                <TextView
                    style="@style/TextCommon"
                    android:text="." />

                <EditText
                    android:id="@+id/etServerAddress4"
                    style="@style/TextServerAddress"
                    android:text="151" />

            </LinearLayout>

            <LinearLayout style="@style/SettingRow">

                <TextView
                    style="@style/TextSettingLeft"
                    android:text="@string/txt_server_port" />

                <EditText
                    android:id="@+id/etServerPort"
                    style="@style/TextServerAddress"
                    android:layout_width="160dp"
                    android:gravity="left|center"
                    android:imeOptions="actionNext"
                    android:maxLength="5"
                    android:text="20101" />

            </LinearLayout>

            <LinearLayout style="@style/SettingRow">

                <TextView
                    style="@style/TextSettingLeft"
                    android:text="@string/txt_site_id" />

                <EditText
                    android:id="@+id/etSiteId"
                    style="@style/TextEdit"
                    android:hint="MPR1"
                    android:imeOptions="actionNext"
                    android:text="MPB1" />

            </LinearLayout>

            <LinearLayout style="@style/SettingRow">

                <TextView
                    style="@style/TextSettingLeft"
                    android:text="@string/txt_factory" />

                <EditText
                    android:id="@+id/factoryId"
                    style="@style/TextEdit"
                    android:hint="WE1"
                    android:imeOptions="actionNext"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                style="@style/SettingRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TextSettingLeft"
                    android:text="WebService Select:" />

                <Spinner
                    android:id="@+id/setting_webservice_select"
                    style="@style/TextEdit"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                style="@style/SettingRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TextSettingLeft"
                    android:text="WebService:" />

                <EditText
                    android:id="@+id/setting_webservice"
                    style="@style/TextEdit"
                    android:imeOptions="actionNext"
                    android:text="1" />

            </LinearLayout>

            <LinearLayout
                style="@style/SettingRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TextView
                    style="@style/TextSettingLeft"
                    android:text="@string/txt_print_setting"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/PrintSetting"
                    style="@style/TextEdit"
                    android:hint="@string/txt_print_setting_inputtext"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout style="@style/SettingRow">

                <TextView
                    style="@style/TextSettingLeft"
                    android:text="@string/txt_setting_psw" />

                <EditText
                    android:id="@+id/settingPsw"
                    style="@style/TextEdit"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text="" />

            </LinearLayout>

            <LinearLayout style="@style/SettingRow">

                <TextView
                    style="@style/TextSettingLeft"
                    android:text="@string/txt_check_setting_psw" />

                <EditText
                    android:id="@+id/checkSettingPsw"
                    style="@style/TextEdit"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/setting_menu_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_menu_1" />

                <CheckBox
                    android:id="@+id/setting_menu_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_menu_2" />

                <CheckBox
                    android:id="@+id/setting_menu_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_menu_3" />

                <CheckBox
                    android:id="@+id/setting_menu_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_menu_4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/setting_menu_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_menu_5" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout style="@style/SettingRow">


            <TextView
                android:id="@+id/settingBtnSave"
                style="@style/ButtonBase"
                android:layout_width="395dp"
                android:layout_gravity="center"
                android:text="@string/txt_save"
                android:visibility="visible" />


        </LinearLayout>
    </LinearLayout>
</layout>