<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/rl_title_update_location_1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/left_button"
            style="@style/TitleBarImageBtn"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/icon_arrow_back"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="middle"
            android:singleLine="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/txt_update_location"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_refresh_button"
            style="@style/TitleBarText"
            android:layout_alignParentRight="true"
            android:text="@string/txt_refresh"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/abort"
            style="@style/TitleBarText"
            android:layout_alignParentRight="true"
            android:text="@string/txt_abort"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/right_text"
            style="@style/TitleBarText"
            android:layout_alignParentRight="true"
            android:text="@string/txt_setting"
            android:visibility="invisible" />
    </RelativeLayout>
</layout>