<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dddddd"
        android:orientation="vertical">

        <include
            android:id="@+id/includeTitle"
            layout="@layout/update_location_title"></include>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_item_white"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#dddddd"
                    android:orientation="vertical"
                    android:padding="20dp" >
                    <LinearLayout
                        style="@style/SettingRow"
                        android:layout_width="match_parent"
                        android:background="@drawable/bg_item_white"
                        android:paddingRight="0dp"
                        android:gravity="center">

                        <TextView
                            style="@style/TextCommon"
                            android:layout_width="wrap_content"
                            android:text="@string/txt_input_order_index" />
                        <EditText
                        android:id="@+id/order_9100"
                        style="@style/TextEdit"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center" />

                        <Button
                            android:id="@+id/orderButton9100"
                            android:layout_width="199dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/btn_bottom_confirm_bg"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/txt_search"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <com.bin.david.form.core.SmartTable
                        android:id="@+id/table_1_9100"
                        android:layout_width="match_parent"
                        android:layout_height="408dp" />

                    <LinearLayout
                        style="@style/SettingRow"
                        android:layout_width="match_parent"
                        android:background="@drawable/bg_item_white"
                        android:layout_marginTop="20dp"
                        android:gravity="center">

                        <TextView
                            style="@style/TextCommon"
                            android:layout_width="67dp"
                            android:text="@string/txt_carrier" />

                        <EditText
                            android:id="@+id/lot_id_9100"
                            style="@style/TextEdit"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="center" />

                        <Button
                            android:id="@+id/clear_1_9100"
                            style="@style/Button_X" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/SettingRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_item_white"
                        android:paddingRight="0dp"
                        android:gravity="center">

                        <TextView
                            style="@style/TextCommon"
                            android:layout_width="wrap_content"
                            android:text="@string/txt_location" />

                        <EditText
                            android:id="@+id/lable_lot_id_9100"
                            style="@style/TextEdit"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:imeOptions="actionDone"
                            android:textAlignment="center" />

                        <Button
                            android:id="@+id/clear_2_9100"
                            style="@style/Button_X"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_item_white"
                        android:gravity="center" >


                        <Button
                            android:id="@+id/button_OK_9100"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/btn_bottom_confirm_bg"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/txt_confirm"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                        <Button
                            android:id="@+id/print9100"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/btn_bottom_confirm_bg"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="打印"
                            android:visibility="gone"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/msg"
                        style="@style/TextCommon"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>